# nats-security-system-rs

./: .gitignore  Cargo.toml  README.md  agent-config.toml  manager-config.toml
config/: example-configs.md
docs/: README.md
docs/diagrams/Architecture Diagrams/: Component Diagram.mermid  Deployment Architecture Diagram.mermid  Network Flow Diagram.mermid  System Architecture Overview.mermid
docs/diagrams/Communication Flow Diagrams/: Agent-Manager Communication Flow.mermid  NATS Message Structure and Topics.mermid  Security Event Propagation Flow.mermid
docs/diagrams/Entity Relationship Diagrams/: Data Model Overview.mermid
docs/diagrams/Process Diagrams/: Agent Monitoring Process.mermid  Security Rule Evaluation Process.mermid
docs/diagrams/Sequence Diagrams/: API Request Handling.mermid  Agent Registration and Heartbeat.mermid  Command Execution Flow.mermid  File Integrity Monitoring Process.mermid  Rule-Based Alert Generation.mermid
docs/diagrams/State Diagrams/: Agent Lifecycle States.mermid  File Monitoring State Machine.mermid  Security Event Processing States.mermid
docs/usage/: README.md
src/: agent.rs  api.rs  common.rs  config.rs  lib.rs  logging.rs  main.rs  manager.rs
