[package]
name = "nats-security-system"
version = "0.1.0"
edition = "2021"

# Define multiple binaries in the same package
[[bin]]
name = "security-agent"
path = "src/agent.rs"

[[bin]]
name = "security-manager"
path = "src/manager.rs"

# The main binary
[[bin]]
name = "nats-security-system"
path = "src/main.rs"

[dependencies]
async-nats = "0.39.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
whoami = "1.4.1"
sha2 = "0.10.6"